<resources>
    <string name="app_name">LapakGaming</string>
    <string name="app_title">lapakgaming</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="title_activity_home">HomeActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="home">Home</string>
    <string name="inbox">Inbox</string>
    <string name="cart">Cart</string>
    <string name="profile">Profile</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="voucher">Voucher</string>
    <string name="game">Game</string>
    <string name="console">Console</string>
    <string name="gear">Gear</string>
    <string name="exit">Exit</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="title_logout">Logout</string>
    <string name="content_logout">Are you sure ?</string>
</resources>
